--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "f2e_week6",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://a401120174.github.io/f2e_week7/",
   "dependencies": {
     "express": "^4.17.1",
     "firebase": "^6.5.0",
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
