--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "redux-saga": "^1.0.5",
     "socket.io": "^2.2.0",
