--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "f2e_week6",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://a401120174.github.io/VScodeChat/",
-  "dependencies": {
-    "express": "^4.17.1",
-    "firebase": "^6.5.0",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
-    "redux-saga": "^1.0.5",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
-  }
+   "name": "f2e_week6",
+   "version": "0.1.0",
+   "private": true,
+   "homepage": "https://a401120174.github.io/VScode-chatroom/",
+   "dependencies": {
+      "express": "^4.17.1",
+      "firebase": "^6.5.0",
+      "gh-pages": "^2.1.1",
+      "node-sass": "^4.12.0",
+      "react": "^16.9.0",
+      "react-dom": "^16.9.0",
+      "react-redux": "^7.1.0",
+      "react-router-dom": "^5.1.2",
+      "react-scripts": "3.1.1",
+      "redux-saga": "^1.0.5",
+      "socket.io": "^2.2.0",
+      "socket.io-client": "^2.2.0"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+   },
+   "eslintConfig": {
+      "extends": "react-app"
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "devDependencies": {
+      "enzyme": "^3.11.0",
+      "enzyme-adapter-react-16": "^1.15.2"
+   }
 }
